syntax = "proto3";

package api.product.v1;

import "google/protobuf/timestamp.proto";

option go_package = "dzhordano/ecom-thing/services/order/pkg/api/product/v1;product_v1";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeactivateProduct(DeactivateProductRequest) returns (DeactivateProductResponse);

  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc SearchProducts(SearchProductsRequest) returns (SearchProductsResponse);
}

message Product {
  string id = 1;
  string category = 2;
  string name = 3;
  string desc = 4;
  double price = 5;
  bool is_active = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message CreateProductRequest {
  string name = 1;
  string category = 2;
  string desc = 3;
  double price = 4;
}

message CreateProductResponse {
  Product product = 1;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message GetProductsResponse {
  repeated Product products = 1;
}

message UpdateProductRequest {
  string id = 1;
  string category = 2;
  string name = 3;
  string desc = 4;
  bool is_active = 5;
  double price = 6;
}

message SearchProductsRequest {
  optional string query = 1;
  optional string category = 2;
  optional double min_price = 3;
  optional double max_price = 4;
  optional uint64 limit = 5;
  optional uint64 offset = 6;
}

message SearchProductsResponse {
  repeated Product products = 1;
}

message UpdateProductResponse {
  Product product = 1;
}

message DeactivateProductRequest {
  string id = 1;
}

message DeactivateProductResponse {
  Product product = 1;
}
